tests/syntax_errors/sasha18_2.tl
-- test case 18.
-- Description : expression error

-- Expected : '2'
require "ifj21" 
function main()  
   +++()         
end              

